plugins {
    id 'java'
    id 'eclipse-wtp'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation group: 'javax.json', name: 'javax.json-api', version: '1.0'
    implementation group: 'javax.enterprise.concurrent', name: 'javax.enterprise.concurrent-api', version: '1.0'
    implementation group: 'javax.enterprise', name: 'cdi-api', version: '1.2'
    implementation group: 'javax.ejb', name: 'javax.ejb-api', version: '3.2'
    implementation group: 'javax.servlet', name: 'javax.servlet-api', version: '3.1.0'
    implementation group: 'javax.jms', name: 'javax.jms-api', version: '2.0'
    implementation group: 'javax.validation', name: 'validation-api', version: '1.1.0.Final'
    implementation group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'
    implementation 'org.hibernate.javax.persistence:hibernate-jpa-2.1-api:1.0.2.Final'
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

eclipse {
    wtp {
        facet {
            // Customize as needed — left intentionally empty due to your comment
        }
    }
}
